--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
 @import "./posts";
+@import "./reset";
+@import "./color";
+@import "./users";
