ログインと新規登録のビュー作成

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -6,6 +6,7 @@ body {
   margin: 0;
   background-repeat: repeat;
   background-size: cover;
+  background-color: skyblue;
   font-family: 'Noto Sans Japanese',
   'Source Sans Pro', Helvetica , Arial,
   '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
@@ -14,7 +15,6 @@ body {
   }
 }
 .header{
-  background-image:asset-url("headerbord.jpg");
   height: 50px;
   width: 100%;
   background-color: beige;
