--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,7 @@
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = render "devise/shared/error_messages", resource: resource
       .form-group
-        = f.label :nickname
+        = f.label :"ニックネーム"
         %br/
         = f.text_field :nickname, class: "text-field width",  autofocus: true, autocomplete: "名前", placeholder: "１０文字以内"
       .form-group
