投稿フォームの作成、newアクションにアクティブレコードのnew追加

--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -2,4 +2,22 @@
   .border.p-4
     %h1.h5.mb-4
       投稿の新規作成
-    
+
+    = form_for @posts, url: posts_path, method: :post, remote: false do |f|
+      .form-group
+        = f.label :image, '画像ファイル'
+        = f.file_field :image, class: 'form-control-file'
+      .form-group
+        = f.label :title, '商品名'
+        = f.text_field :title, class: 'form-control'
+      .form-group
+        = f.label :genre, 'ジャンル'
+        = f.text_field :genre, class: 'form-group-text'
+      .form-group
+        = f.label :price, '値段'
+        = f.text_field :price, class: 'form-group-text'
+      .form-group
+        = f.label :text, '本文'
+        = f.text_area :text, class: 'form-control', rows: "4"
+      .button
+        = f.submit '投稿', class: 'btn btn-primary'
