--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,7 +2,7 @@
   .row
     .col-lg-3.col-md-6
       .card
-        %img.card-img-top{:alt => "Card image cap", :src => ".../100px180/"}/
+        %img.card-img-top{:alt => "Card image cap", :src => ""}/
         .card-body
           %h5.card-title a
           %p.card-genre a
