画像投稿機能の追加

--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -5,8 +5,9 @@
 
     = form_for @posts, url: posts_path, method: :post, remote: false do |f|
       .form-group
-        = f.label :image, '画像ファイル'
-        = f.file_field :image, class: 'form-control-file'
+      = f.fieldes_for :iamges do |c|
+        = c.label :image, '画像ファイル'
+        = c.file_field :src, class: 'form-control-file'
       .form-group
         = f.label :title, '商品名'
         = f.text_field :title, class: 'form-control'
