--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -5,7 +5,7 @@
 
     = form_for @posts, url: posts_path, method: :post, remote: false do |f|
       .form-group
-      = f.fieldes_for :iamges do |c|
+      = f.fields_for :iamges do |c|
         = c.label :image, '画像ファイル'
         = c.file_field :src, class: 'form-control-file'
       .form-group
