--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,8 +1,9 @@
 .container
   .row
+  - @posts.each do |post|
     .col-lg-3.col-md-6
       .card
-        %img.card-img-top{:alt => "Card image cap", :src => ""}/
+        = image_tag post.image.url, class: "card-img-top"
         .card-body
           %h5.card-title a
           %p.card-genre a
