--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -5,9 +5,8 @@
 
     = form_for @posts, url: posts_path, method: :post, remote: false do |f|
       .form-group
-      = f.fields_for :iamges do |c|
-        = c.label :image, '画像ファイル'
-        = c.file_field :src, class: 'form-control-file'
+        = f.label :image, '画像ファイル'
+        = f.file_field :image, class: 'form-control-file'
       .form-group
         = f.label :title, '商品名'
         = f.text_field :title, class: 'form-control'
