ApplicationControllerにconfigure_permitted_parametersとset_current_userを記載、showコントローラーのエラー修正

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,5 +2,6 @@
   .row.p-3
     %h2 投稿詳細情報
     .col-mb-4
-      = image_tag @posts.image, class: "card-img-top"
+      = image_tag @posts.image.url, class: "card-img-top"
+      
     
