--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -2,6 +2,9 @@
   .row.p-3
     %h2 投稿詳細情報
     .col-mb-4
-      = image_tag @posts.image.url, class: "card-img-top"
-      
+      .post_detail
+        .panel.panel-default
+          .panel-heading.text-center
+            = image_tag @posts.image.url, class: "card-img-top"
+    .col-md-8
     
