cssの調整、スペルミスの修正、tableタグの追加

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -12,3 +12,12 @@
     border-color: #ddd;
   }
 }
+.col-md-8{
+  float: left;
+  width: 750px;
+  height: 199px;
+  h4{
+    margin: 15px 0;
+    font-size: 18px;
+  }
+}
