--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -16,4 +16,8 @@
           %tr 
             %th ジャンル
             %td= @posts.genre
+      .card-body
+        %p.card-text
+          = @posts.text
+      .buttons.text-coenter
         
