詳細ページに外部リンクボタン追加

--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -21,5 +21,8 @@
   }
   .buttons.text-coenter{
     text-align: center;
+    .btn.btn-outline-warning{
+      background-color: white;
+    }
   }
 }
