editアクション、updateアクションの追加、外部リンクの新規追加、text_fieldからnumber_fieldに変更、editビューの追加

--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,7 +1,7 @@
 .container.mt-4
   .border.p-4
     %h1.h5.mb-4
-      投稿の新規作成
+      投稿の編集
 
     = form_for @posts, url: posts_path, method: :post, remote: false do |f|
       .form-group
