--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -22,3 +22,6 @@
       .buttons.text-coenter
         = link_to 'ソフマップで詳しくみる',"https://www.sofmap.com/", class: 'btn btn-primary'
         = link_to 'Amazonで詳しく見る', "https://www.amazon.co.jp/?&tag=hydraamazonav-22&ref=pd_sl_7ibq2d37on_e&adgrpid=56100363354&hvpone=&hvptwo=&hvadid=289260145877&hvpos=&hvnetw=g&hvrand=3347013380854867307&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1009540&hvtargid=kwd-10573980&hydadcr=27922_11415158&gclid=Cj0KCQjws536BRDTARIsANeUZ5-acf2wUuJzUVWFp9nIZrlEVDS-3bPYRtTi0xOqAIInIvODQsFrhREaAgZ1EALw_wcB", class: 'btn btn-outline-warning'
+        = link_to '価格.comで詳しく見る', "https://kakaku.com/", class: 'btn btn-info'
+  .mt-4.text-right
+    .btn.btn-primary 編集
