--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -20,6 +20,11 @@
             = link_to new_post_path, class: "link-btn p-2 bg-primary text-white mt-4" do
               %i.far.fa-paper-plane
               %span 投稿
+          %li.nav-item.dropdown
+            %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+              マイページ
+            %ul.dropdown-menu{"aria-labelledby" => "navbarDropdown"}
+              %span= link_to "投稿一覧", user_path(current_user), class: "dropdown-item"
           %li.nav-logout
             = link_to destroy_user_session_path, method: :delete, class: "link-btn p-2 bg-primary text-white mt-4" do
               %i.fa.fa-user-minus
