--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -27,3 +27,5 @@
   .mt-4.text-right
     = link_to '編集', edit_post_path, class: 'btn btn-primary'
     = link_to '削除', post_path, class: 'btn btn-danger', method: :delete
+  .p-3
+    %h2.mb-3 口コミ投稿する
