--- a/app/views/comments/_new_post.html.haml
+++ b/app/views/comments/_new_post.html.haml
@@ -2,6 +2,11 @@
 = form_for @comment, url: posts_path do |f|
   / エラーメッセージ
   = render 'layouts/error_messages', model: f.object
+  / タイトル
+  .form-group.row
+    = f.label :title, 'タイトル ', class:'col-md-3 col-form-label'
+    .col-md-9
+      = f.text_field :title, class: "form-control"
   / 評価
   #star.form-group.row
     = f.label :rate,'評価 ', class:'col-md-3 col-form-label'
