--- a/app/views/comments/_new_post.html.haml
+++ b/app/views/comments/_new_post.html.haml
@@ -11,3 +11,12 @@
   #star.form-group.row
     = f.label :rate,'評価 ', class:'col-md-3 col-form-label'
     = f.hidden_field :rate, id: :review_star
+    :javascript
+      $('#star').raty({
+        size     : 36,
+        starOff:  '#{asset_path('star-off.png')}',
+        starOn : '#{asset_path('star-on.png')}',
+        starHalf: '#{asset_path('star-half.png')}',
+        scoreName: 'comment[rate]',
+        half: true,
+      });
