口コミ内容textフォーム作成

--- a/app/views/comments/_new_post.html.haml
+++ b/app/views/comments/_new_post.html.haml
@@ -20,3 +20,8 @@
         scoreName: 'comment[rate]',
         half: true,
       });
+  / 口コミ
+  .form-group.row
+    = f.label :content, '口コミ内容', class: 'col-md-3 col-form-label'
+    .col-md-9
+      = f.text_area :content, class: "form-control", rows: "8"
