Heroku 用の Procfile を作成,口コミ入力フォームに確認ボタンを追加

--- a/app/views/comments/_new_post.html.haml
+++ b/app/views/comments/_new_post.html.haml
@@ -25,3 +25,7 @@
     = f.label :content, '口コミ内容', class: 'col-md-3 col-form-label'
     .col-md-9
       = f.text_area :content, class: "form-control", rows: "8"
+  / 確認ボタン
+  .form-group.row.justify-content-end
+    .col-md-9
+      = f.submit '投稿する', class: "btn btn-primary"
