--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -32,6 +32,7 @@ body {
     font-weight: bold;
   }
   nav.navbar.navbar-expand-lg.navbar-light{
+    margin-top: 10px;
     margin-left: auto;
   }
   .navbar{
