外部リンクを2個追加

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -24,6 +24,8 @@
         = link_to 'ソフマップで詳しくみる',"https://www.sofmap.com/", class: 'btn btn-primary'
         = link_to 'Amazonで詳しく見る', "https://www.amazon.co.jp/?&tag=hydraamazonav-22&ref=pd_sl_7ibq2d37on_e&adgrpid=56100363354&hvpone=&hvptwo=&hvadid=289260145877&hvpos=&hvnetw=g&hvrand=3347013380854867307&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1009540&hvtargid=kwd-10573980&hydadcr=27922_11415158&gclid=Cj0KCQjws536BRDTARIsANeUZ5-acf2wUuJzUVWFp9nIZrlEVDS-3bPYRtTi0xOqAIInIvODQsFrhREaAgZ1EALw_wcB", class: 'btn btn-outline-warning'
         = link_to '価格.comで詳しく見る', "https://kakaku.com/", class: 'btn btn-info'
+        = link_to 'ツクモで詳しく見る', "https://shop.tsukumo.co.jp/", class: 'btn btn-success'
+        = link_to 'ドスパラで詳しく見る', "https://www.dospara.co.jp/?utm_source=google&utm_medium=cpc&utm_campaign=gsl_brand&utm_term=gsl_brand&utm_content=0000009&_bdadid=JPGTE5.01c4000o&gclid=Cj0KCQjwqfz6BRD8ARIsAIXQCf1gudbEj7QgQ3uGjYOoxxPLt3TTkblk5twlMJiEsgIJogOq_siTQIcaAkPEEALw_wcB", class: 'btn btn-outline-info'
   .mt-4.text-right
     = link_to '編集', edit_post_path, class: 'btn btn-primary'
     = link_to '削除', post_path, class: 'btn btn-danger', method: :delete
