--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -29,6 +29,11 @@
   .mt-4.text-right
     = link_to '編集', edit_post_path, class: 'btn btn-primary'
     = link_to '削除', post_path, class: 'btn btn-danger', method: :delete
+  / 口コミ投稿フォーム
   .p-3
     %h2.mb-3 口コミ投稿する
     = render 'comments/new_post', post: @post, comment: @comment
+  / / 口コミ投稿フォーム
+  / 口コミ一覧
+  = render 'comments/posts'
+  / /口コミ一覧
