口コミ投稿じにエラーがでていたため修正、口コミ一覧を表示がうまくいっていなかったため修正

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -32,7 +32,7 @@
   / 口コミ投稿フォーム
   .p-3
     %h2.mb-3 口コミ投稿する
-    = render 'comments/new_post', post: @post, comment: @comment
+    = render 'comments/new_post'
   / / 口コミ投稿フォーム
   / 口コミ一覧
   = render 'comments/posts'
