--- a/app/views/comments/_new_post.html.haml
+++ b/app/views/comments/_new_post.html.haml
@@ -1,5 +1,5 @@
 / 口コミ入力フォーム
-= form_for @comment, url: posts_path do |f|
+= form_with(model: [@posts, @comment], local: true) do |f|
   / エラーメッセージ
   = render 'layouts/error_messages', model: f.object
   / タイトル
