time_zoneTokyoからAsia/Tokyoに変更、全角スペースを半角スペースに変更、口コミ一覧に投稿した日付けと時間を表示するようにした。

--- a/app/views/comments/_posts.html.haml
+++ b/app/views/comments/_posts.html.haml
@@ -1,4 +1,7 @@
 - if @comments.present?
   - @comments.each do |comment|
     .row.posts
-      %p= comment.title
+      .col-md-6.mb-3
+        .posts-content
+          %p= comment.created_at.strftime("%Y-%m-%d %H:%M") 
+          %p= comment.title
