--- a/app/views/comments/_posts.html.haml
+++ b/app/views/comments/_posts.html.haml
@@ -20,5 +20,6 @@
               });
           / /星評価
           %p= comment.content
-        .col-md-12.edit-button
-          
+          .col-md-12.edit-button
+          - if user_signed_in? && current_user == @posts.user
+            = link_to '口コミを編集', edit_post_comment_path(@comments), method: :get, class:'btn btn-default'
