--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -26,14 +26,15 @@
         = link_to '価格.comで詳しく見る', "https://kakaku.com/", class: 'btn btn-info'
         = link_to 'ツクモで詳しく見る', "https://shop.tsukumo.co.jp/", class: 'btn btn-success'
         = link_to 'ドスパラで詳しく見る', "https://www.dospara.co.jp/?utm_source=google&utm_medium=cpc&utm_campaign=gsl_brand&utm_term=gsl_brand&utm_content=0000009&_bdadid=JPGTE5.01c4000o&gclid=Cj0KCQjwqfz6BRD8ARIsAIXQCf1gudbEj7QgQ3uGjYOoxxPLt3TTkblk5twlMJiEsgIJogOq_siTQIcaAkPEEALw_wcB", class: 'btn btn-outline-info'
-  .mt-4.text-right
-    = link_to '編集', edit_post_path, class: 'btn btn-primary'
-    = link_to '削除', post_path, class: 'btn btn-danger', method: :delete
-  / 口コミ投稿フォーム
-  .p-3
-    %h2.mb-3 口コミ投稿する
-    = render 'comments/new_post'
-  / / 口コミ投稿フォーム
+  - if user_signed_in? && current_user.id == @posts.user_id 
+    .mt-4.text-right
+      = link_to '編集', edit_post_path, class: 'btn btn-primary'
+      = link_to '削除', post_path, class: 'btn btn-danger', method: :delete
+    / 口コミ投稿フォーム
+    .p-3
+      %h2.mb-3 口コミ投稿する
+      = render 'comments/new_post'
+    / / 口コミ投稿フォーム
   / 口コミ一覧
   = render 'comments/posts'
   / /口コミ一覧
