フラッシュメッセージの追加

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,4 +10,6 @@
   %body
     = render 'shared/header'
     = yield
+    .container
+      = render 'layouts/flash_messages'
     = render 'shared/footer'
