口コミ編集、削除機能の追加

--- a/app/views/comments/_posts.html.haml
+++ b/app/views/comments/_posts.html.haml
@@ -20,4 +20,7 @@
               });
           / /星評価
           %p= comment.content
-         
+        .col-md-12.edit-button
+          - if current_user == comment.user
+            = link_to '口コミを編集', edit_post_comment_path(id: comment.id, post_id: comment.post.id), method: :get, class:'btn btn-default'
+            = link_to '口コミを削除', post_comment_path(post_id: @posts, id: comment.id), method: :delete, class:'btn btn-default'
