--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -1,3 +1,33 @@
 .p-3
   %h2.mb-3 口コミ編集フォーム
-  = render 'comments/new_post'
+  / 口コミ入力フォーム
+= form_with(model: [@posts, @comment], :url => {:action => :update}, local: true) do |f|
+  / エラーメッセージ
+  = render 'layouts/error_messages', model: f.object
+  / タイトル
+  .form-group.row
+    = f.label :title, 'タイトル ', class:'col-md-3 col-form-label'
+    .col-md-9
+      = f.text_field :title, class: "form-control"
+  / 評価
+  #star.form-group.row
+    = f.label :rate,'評価 ', class:'col-md-3 col-form-label'
+    = f.hidden_field :rate, id: :review_star
+    :javascript
+      $('#star').raty({
+        size     : 36,
+        starOff:  '#{asset_path('star-off.png')}',
+        starOn : '#{asset_path('star-on.png')}',
+        starHalf: '#{asset_path('star-half.png')}',
+        scoreName: 'comment[rate]',
+        half: true,
+      });
+  / 口コミ
+  .form-group.row
+    = f.label :content, '口コミ内容', class: 'col-md-3 col-form-label'
+    .col-md-9
+      = f.text_area :content, class: "form-control", rows: "8"
+  / 確認ボタン
+  .form-group.row.justify-content-end
+    .col-md-9
+      = f.submit '投稿する', class: "btn btn-primary"
