口コミ機能のアイコンをスターに変更

--- a/app/views/posts/_modal.html.haml
+++ b/app/views/posts/_modal.html.haml
@@ -19,7 +19,7 @@
             %p
               会員登録することで自由に投稿することができます。
           %li
-            %i.far.fa-heart
+            %i.far.fa-star
             口コミ機能
             %p
               PCパーツの感想を投稿できます。
