--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -17,9 +17,6 @@
           %tr
             %th ジャンル
             %td= @posts.genre
-      .card-body
-        %p.card-text
-          = @posts.text
       .buttons.text-coenter
         = link_to 'ソフマップで詳しくみる',"https://www.sofmap.com/", class: 'btn btn-primary'
         = link_to 'Amazonで詳しく見る', "https://www.amazon.co.jp/?&tag=hydraamazonav-22&ref=pd_sl_7ibq2d37on_e&adgrpid=56100363354&hvpone=&hvptwo=&hvadid=289260145877&hvpos=&hvnetw=g&hvrand=3347013380854867307&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1009540&hvtargid=kwd-10573980&hydadcr=27922_11415158&gclid=Cj0KCQjws536BRDTARIsANeUZ5-acf2wUuJzUVWFp9nIZrlEVDS-3bPYRtTi0xOqAIInIvODQsFrhREaAgZ1EALw_wcB", class: 'btn btn-outline-warning'
@@ -30,6 +27,10 @@
     .mt-4.text-right
       = link_to '編集', edit_post_path, class: 'btn btn-primary'
       = link_to '削除', post_path, class: 'btn btn-danger', method: :delete
+    .card-body
+      %h2.card-title 商品の詳細
+      %p.card-text
+        = simple_format(@posts.text)
     / 口コミ投稿フォーム
     .p-3
       %h2.mb-3 口コミ投稿する
