--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,5 +1,9 @@
 #footer{
+  padding: 4em 0;
+  margin-top: 40px;
   background: #323a45;
+  bottom: 0;
+  font-weight: 300;
   .container{
     padding-bottom: 100px;
   }
