--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,11 +1,14 @@
-.container
-  .row
-    - @posts.each do |post|
-      .col-lg-3.col-md-6
-        .card
-          = image_tag post.image.url, class: "card-img-top"
-          .card-body
-            %h5.card-title= (post.title)
-            %span.card-price= "¥#{post.price.to_s(:delimited)}"
-            .border.border-white.mt-4
-              = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
+%main.main
+  .container
+    .row
+      .post
+      - @posts.each do |post|
+        .col-lg-3.col-md-6
+          .card
+            = image_tag post.image.url, class: "card-img-top"
+            .card-body
+              %h5.card-title= (post.title)
+              %p.card-genre= (post.category.name)
+              %span.card-price= "¥#{post.price.to_s(:delimited)}"
+              .border.border-white.mt-4
+                = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
