--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -6,7 +6,7 @@
           = image_tag post.image.url, class: "card-img-top"
           .card-body
             %h5.card-title= (post.title)
-            %p.card-genre= (post.genre)
+            %p.card-genre= (post.category.name)
             %span.card-price= (post.price)
-          .border.border-white.mt-4
-            = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
+            .border.border-white.mt-4
+              = link_to "詳細へ", post_path(post), class: "btn btn-primary" 
