--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,46 +1,43 @@
-.header
-  .header_title
-    = link_to "PCPART", root_path
-  %nav.navbar.navbar-expand-lg.navbar-light
-    %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
-      %span.navbar-toggler-icon
-    #navbarSupportedContent.collapse.navbar-collapse
-      %ul.nav
+%nav.navbar.navbar-expand-lg.navbar-light
+  = link_to "PCPART", root_path, class: "navbar-brand" 
+  %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
+    %span.navbar-toggler-icon
+  #navbarSupportedContent.collapse.navbar-collapse
+    %ul.navbar-nav.mr-auto
+      %li.nav-item.active
         .search-bar
           = search_form_for @q, url: search_posts_path, class: 'container-2' do |f|
             = f.text_field :title_cont, id: 'search', placeholder: '商品名検索'
             = button_tag type: 'submit', class: "search-btn" do
               = icon('fas', 'search')
-        %li.Introduction
-          %button.btn.btn-primary{"data-target" => "#exampleModal", "data-toggle" => "modal", :type => "button"}
-            %i.fas.fa-leaf
-            %span はじめに
-          = render "posts/modal"
-        %li.home
-          = link_to root_path, class: "link-btn p-2 bg-primary text-white" do
-            %i.fas.fa-home
-            %span ホーム
-        - if user_signed_in?
-          %li.post
-            = link_to new_post_path, class: "link-btn p-2 bg-primary text-white mt-4" do
-              %i.far.fa-paper-plane
-              %span 投稿
-          %li.nav-item.dropdown
-            %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-              マイページ
-            %div.dropdown-menu{"aria-labelledby" => "navbarDropdown"}
-              %span= link_to "投稿一覧", user_path(current_user), class: "dropdown-item"
-          %li.nav-item.dropdown
-            %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-              カテゴリーから選ぶ
-            %div.dropdown-menu{"aria-labelledby" => "navbarDropdown"}
-              
-          %li.nav-logout
-            = link_to destroy_user_session_path, method: :delete, class: "link-btn p-2 bg-primary text-white mt-4" do
-              %i.fa.fa-user-minus
-              %span ログアウト    
-        - else
-          %li.nav-login
-            = link_to "ログイン", new_user_session_path, class: "link-btn p-2 bg-primary text-white mt-4"
-          %li.nav-sign
-            = link_to "会員登録", new_user_registration_path, class: "link-btn p-2 bg-primary text-white mt-4"      
+      %li.nav-item      
+        = link_to root_path, class: "nav-link" do
+          %i.fas.fa-home
+            ホーム
+          %span.sr-only (current)
+      %li.nav-item
+        = link_to new_post_path, class: "nav-link" do
+          %i.far.fa-paper-plane
+          %span 投稿
+      - if user_signed_in?
+        %li.nav-item.dropdown
+          %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+            マイページ
+          .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
+            %span= link_to "投稿一覧", user_path(current_user), class: "dropdown-item"
+            %a.dropdown-item{:href => "#"} Another action
+            .dropdown-divider
+            %a.dropdown-item{:href => "#"} Something else here
+        %li.nav-item.dropdown    
+          %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
+            カテゴリーから選ぶ
+          .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
+        %li.nav-item
+          = link_to destroy_user_session_path, method: :delete, class: "nav-link" do
+            %i.fa.fa-user-minus
+            %span ログアウト     
+      - else
+        %li.nav-item
+          = link_to "ログイン", new_user_session_path, class: "nav-link"
+        %li.nav-item
+          = link_to "会員登録", new_user_registration_path, class: "nav-link"
