--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,18 +1,17 @@
-#footer{
+footer{
   padding: 4em 0;
   margin-top: 40px;
   background: #323a45;
   bottom: 0;
   font-weight: 300;
-  .container{
+  .container.py-5{
     padding-bottom: 100px;
   }
-}
-
-#footer a{
-  color: #fff;
-  text-decoration: none;
-  font-size: 30px;
+  a{
+   color: #fff;
+   text-decoration: none;
+   font-size: 30px;
+ }
 }
 
 .d-block.mb-3{
