--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -16,3 +16,20 @@ body {
     outline: none;
   }
 }
+main{
+  .jumbotron.text-center{
+    background-color: white;
+  }
+  .jumbotron-heading{
+    font-weight: 300;
+    font-size: 2.5rem;
+  }
+  h1{
+    margin-bottom: 10px;
+  }
+  p{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+}
