--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,12 +1,11 @@
-%footer#footer
-  .footer-content
-    .container
-      .row
-        .col-md-3.col-sm-4.col-md-push-3
-          = link_to "PCPART", root_path
-          %smail.d-block.mb-3 © 2020
-        .col-md-3.col-sm-4.col-md-push-3
-          %ul
-            %li= link_to 'トップページ', root_path
-            
-        
+%footer
+  .container.py-5
+    .row
+      .col-md-3.col-sm-4.col-md-push-3
+        = link_to "PCPART", root_path
+        %smail.d-block.mb-3 © 2020
+      .col-md-3.col-sm-4.col-md-push-3
+        %ul
+          %li= link_to 'トップページ', root_path
+          
+      
