--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -6,6 +6,8 @@
     padding-bottom: 10px;
   }
   .border.p-4{
+    margin-top: 10px;
+    border: 1px solid black !important;
     a{
       text-decoration: none;
     }
