--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -34,7 +34,7 @@
         %p.card-text
           = simple_format(@posts.text)
       / 口コミ投稿フォーム
-      .p-3
+      .p-3.border
         %h2.mb-3 口コミ投稿する
         = render 'comments/new_post'
       / / 口コミ投稿フォーム
