--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import "./comment";
 @import "./header";
 @import "./footer";
+@import "./search";
 
 .content{
   min-height: calc(100vh - 70px);
