usershowビューの見出しに余白追加、navberに親カテゴリのリスト追加

--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -1,7 +1,8 @@
 .container{
-  h1{
+  .postlist{
     text-align: center;
     font-size: 30px;
+    margin-top: 10px;
     padding-bottom: 10px;
   }
   .border.p-4{
