--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -27,13 +27,13 @@
                 マイページ
               .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
                 %span= link_to "投稿一覧", user_path(current_user), class: "dropdown-item"
-                %a.dropdown-item{:href => "#"} Another action
-                .dropdown-divider
-                %a.dropdown-item{:href => "#"} Something else here
             %li.nav-item.dropdown    
               %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                 カテゴリーから選ぶ
               .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
+                - @category_parent_array.each do |parent_categories|
+                  .TopHeader__Inner__Lists__Left__Category__ParentCategories__List{data: {id: "#{parent_categories.id}"}}
+                    = link_to "#{parent_categories.name}",select_category_index_posts_path(parent_categories.id), class: "parent_category",id: "#{parent_categories.id}"
             %li.nav-item
               = link_to destroy_user_session_path, method: :delete, class: "nav-link" do
                 %i.fa.fa-user-minus
