ルーティングにapi・categoryの記載追加、api・categoryのコントローラー追加、headerのカテゴリーの記載変更、categories.jsのコードを一度削除

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -8,6 +8,12 @@
     color: black;
     text-decoration: none;
   }
+  .header-bottom-left-category{
+    a{
+      text-decoration: none;
+      color: #000;
+    }
+  }
   // 検索ボタン
   .search-bar{
     .container-2{
