--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -31,9 +31,11 @@
               %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
                 カテゴリーから選ぶ
               .dropdown-menu{"aria-labelledby" => "navbarDropdown"}
-                - @category_parent_array.each do |parent_categories|
-                  .TopHeader__Inner__Lists__Left__Category__ParentCategories__List{data: {id: "#{parent_categories.id}"}}
-                    = link_to "#{parent_categories.name}",select_category_index_posts_path(parent_categories.id), class: "parent_category",id: "#{parent_categories.id}"
+                .contents__bottom
+                  .header-bottom-left
+                    .header-bottom-left-category
+                      = link_to "", api_category_path(0) ,class: "category_name", id: "catroy_top_title"
+                      .header-bottom-left-category-field
             %li.nav-item
               = link_to destroy_user_session_path, method: :delete, class: "nav-link" do
                 %i.fa.fa-user-minus
